--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "authors": [
         {
-            "name": "Alex7Ander",
+            "name": "Alex7Ander"
         }
     ],
     "require": {}
